# jampy

./: .gitignore  README.md  pyproject.toml
docs/: desktop-audio-capture.md  prerequisites.md
jampy/: __init__.py  __main__.py  app.py  config.py  project.py  session.py  streamdeck_controller.py  sync.py  utils.py
jampy/audio/: engine.py  formats.py  mixer.py  recorder.py
jampy/processing/: splicer.py
jampy/tui/: styles.py
jampy/tui/screens/: home.py  post_session.py  project.py  session.py  wizard.py
jampy/tui/widgets/: session_log.py  track_list.py  transport.py  waveform.py
