[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jampy"
version = "0.4.0"
description = "Music Recording Session Manager"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
]

[project.scripts]
jampy = "jampy.__main__:main"
